--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,7 +1,7 @@
 [target.thumbv7m-none-eabi]
 runner = "probe-rs run --chip STM32F103CB"
 rustflags = [
-  "-C", "link-arg=-Tlink.x"
+  #"-C", "link-arg=-Tlink.x"
   #"-C", "link-arg=-Tmemory.x"
 ]
 
