--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-t
 embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
 embassy-futures = {version = "0.1.2"}
 
+rtic = { version = "2.2.0", features = ["thumbv7-backend"]}
+rtic-monotonics = { version = "2.1.0" , features = ["cortex-m-systick"]}
+rtic-sync = { version = "1.4.0" }
+
 cortex-m = { version = "0.7.6", features = ["critical-section-single-core", "inline-asm"] }
 cortex-m-rt = "0.7.5"
 embedded-hal = { version = "1.0.0"}
